perf: deduplicate symbol lookups in checkActiveAlerts
Previously one API call was made per active alert, meaning 5 AAPL
alerts triggered 5 identical API calls. Now unique symbols are fetched
once and the result map is shared across alerts for the same symbol.
Also: add early-return when no active alerts exist, add Objects.nonNull
guard before syncing alert counts, tighten log message, replace
isEmpty() with isBlank() in validate().